# ds-corebfrb

./: CMakeLists.txt  README.md
matlab/dev/: angle_between_vectors.m  main.m
matlab/sim/: corebfrb_mex.c
motion_algo/core/: corebfrb.c  corebfrb.h
motion_algo/test/: main.c
